# HDCE

./: Makefile  README.md  requirements.txt
my_hdce_project/: Dockerfile  pyproject.toml  requirements.txt
my_hdce_project/config/: default.yaml
my_hdce_project/scripts/: run_inference.sh
my_hdce_project/src/data/: dataset.py
my_hdce_project/src/hdce/: __init__.py  global_semantic_module.py  hdce_model.py  knowledge_interface.py  local_context_encoder.py  logging_utils.py  time_series_memory.py
my_hdce_project/src/inference/: infer.py
my_hdce_project/src/trainer/: lightning_trainer.py  train.py
my_hdce_project/tests/: test_global_semantic_module.py  test_local_context_encoder.py
src/data/: dataset.py
src/hdce/: __init__.py  global_semantic_module.py  hdce_model.py  knowledge_interface.py  local_context_encoder.py  logging_utils.py  time_series_memory.py
src/inference/: infer.py
src/trainer/: lightning_trainer.py  train.py
tests/: test_hdce_integration.py
